[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yew"
version = "0.1.1-dev1"
authors = [
  { name="Bharat Nair", email="bharat@rubberducker.xyz" },
]
description = "An OldSchool RuneScape API wrapper for Python."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "certifi==2024.2.2",
  "charset-normalizer==3.3.2",
  "idna==3.6",
  "requests==2.31.0",
  "urllib3==2.2.1",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet",
    "Topic :: Games/Entertainment :: Role-Playing",
]

[project.urls]
Homepage = "https://github.com/bharat-nair/yew"
Issues = "https://github.com/bharat-nair/yew/issues"